<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/txtChooseMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="126dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSinglePlayer"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtChooseMode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:fontFamily="casual"
            android:onClick="clickSinglePlayer"
            android:text="@string/singlePlayer"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/holo_orange_dark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMultiPlayer"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnSinglePlayer"
            android:layout_alignStart="@+id/btnSinglePlayer"
            android:layout_below="@+id/btnSinglePlayer"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:fontFamily="casual"
            android:onClick="clickMultiPlayer"
            android:text="@string/multiPlayer"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLeaderBoard"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btnMultiPlayer"
            android:layout_below="@+id/btnMultiPlayer"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:fontFamily="casual"
            android:onClick="clickLeaderBoard"
            android:text="@string/leaderBoard"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLeaderBoard"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:fontFamily="casual"
            android:onClick="clickLogout"
            android:text="@string/logout"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </RelativeLayout>



</android.support.constraint.ConstraintLayout>